--- a/index.html
+++ b/index.html
@@ -11,13 +11,40 @@
         <h1 class="text-2xl font-bold bg-gradient-to-r from-blue-500 to-purple-600 bg-clip-text text-transparent">OmniClip AI</h1>
         <button class="bg-white text-black px-6 py-2 rounded-full font-bold">Connexion</button>
     </nav>
-    <main class="max-w-4xl mx-auto mt-20 text-center">
-        <h2 class="text-6xl font-extrabold mb-6">Transformez vos vidéos en <span class="text-blue-500">Cash</span></h2>
+    <main class="max-w-4xl mx-auto mt-20 text-center px-4">
+        <h2 class="text-5xl md:text-6xl font-extrabold mb-6">Transformez vos vidéos en <span class="text-blue-500">Cash</span></h2>
         <p class="text-xl text-gray-400 mb-10">L'IA qui découpe vos vidéos longues en clips viraux pour TikTok & Reels.</p>
-        <div class="bg-gray-900 p-10 rounded-3xl border border-gray-800 shadow-2xl">
-            <input type="text" placeholder="Collez un lien YouTube ici..." class="w-full p-4 rounded-xl bg-black border border-gray-700 mb-4 text-white">
-            <button class="w-full bg-blue-600 hover:bg-blue-700 p-4 rounded-xl font-bold text-lg">Générer mes Clips Viraux (49€/mois)</button>
+        <div class="bg-gray-900 p-6 md:p-10 rounded-3xl border border-gray-800 shadow-2xl">
+            <input id="videoUrl" type="text" placeholder="Collez un lien YouTube ici..." class="w-full p-4 rounded-xl bg-black border border-gray-700 mb-4 text-white focus:outline-none focus:border-blue-500">
+            <button onclick="generateClips()" id="btnMain" class="w-full bg-blue-600 hover:bg-blue-700 p-4 rounded-xl font-bold text-lg transition-all">Générer mes Clips Viraux (49€/mois)</button>
+            <div id="resultArea" class="mt-6 text-left hidden p-4 bg-black rounded-lg border border-gray-700">
+                <p class="text-blue-400 font-bold mb-2">Analyse de l'IA en cours...</p>
+                <div id="aiResponse" class="text-gray-300 text-sm italic"></div>
+            </div>
         </div>
     </main>
+
+    <script>
+        async function generateClips() {
+            const url = document.getElementById('videoUrl').value;
+            const btn = document.getElementById('btnMain');
+            const resultArea = document.getElementById('resultArea');
+            const aiResponse = document.getElementById('aiResponse');
+
+            if(!url) return alert("Veuillez coller un lien !");
+
+            btn.innerText = "Analyse IA en cours...";
+            btn.disabled = true;
+            resultArea.classList.remove('hidden');
+            aiResponse.innerText = "Connexion au serveur de clips...";
+
+            // Simulation de l'appel IA pour le test
+            setTimeout(() => {
+                aiResponse.innerText = "Analyse terminée ! J'ai trouvé 3 segments viraux. Pour télécharger les clips en HD, veuillez finaliser votre abonnement à 49€.";
+                btn.innerText = "Débloquer les Clips (49€)";
+                btn.classList.replace('bg-blue-600', 'bg-green-600');
+            }, 3000);
+        }
+    </script>
 </body>
 </html>
